testsuite/tests/grammar/invalid_error_node/common.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- or(Example(@Example) | skip(ErrorDecl))
}

@abstract class FooNode implements Node[FooNode] {
}

@with_abstract_list class Example : FooNode implements TokenNode {
}
